forms are added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,5 +3,7 @@
     <h1> Media Watch List</h1>
     <p>Keep Track of The Media</p>
   </header>
+  <app-reactive-model-media-item-form>
+  </app-reactive-model-media-item-form>
   <app-media-item-list-component ></app-media-item-list-component>
 </section>
