--- a/src/app/reactive-model-media-item-form/reactive-model-media-item-form.component.html
+++ b/src/app/reactive-model-media-item-form/reactive-model-media-item-form.component.html
@@ -6,13 +6,14 @@
       <li>
         <label for="medium">Medium</label>
         <select name="medium" id="medium" formControlName="medium">
-          <option value="Movies">Movies</option>
-          <option value="Series">Series</option>
+          <option  *ngFor = "let medium of lookuplists.mediums " [value]="medium">{{ medium }}</option>
+         
         </select>
       </li>
       <li>
         <label for="name">Name</label>
         <input type="text" name="name" id="name" formControlName="name">
+        <div *ngIf="form.get('name').hasError('pattern')" class="error"> Name has invalid</div>
       </li>
       <li>
         <label for="category">Category</label>
@@ -30,5 +31,5 @@
         <input type="text" name="year" id="year" maxlength="4" formControlName="year">
       </li>
     </ul>
-    <button type="submit">Save</button>
+    <button type="submit" [disabled]="!form.valid">Save</button>
   </form>
