--- a/src/app/media-item-list-component/media-item-list-component.component.html
+++ b/src/app/media-item-list-component/media-item-list-component.component.html
@@ -1,7 +1,16 @@
+
+<header 
+    [ngClass]="{'medium-movies':medium === 'Movies', 'medium-series':medium === 'Series'}">
+    <h2>{{medium}}</h2>
+    <div *ngIf="mediaItems">{{ mediaItems | categoryList }}</div>
+</header>
 <section>
-  <header>
-    <div>{{ mediaItems | categoryList }}</div>
-  </header>
-    <app-media-item-component *ngFor="let mediaItem of mediaItems" [mediaItem]="mediaItem"
-      (delete)="onMediaItemDelete($event)"[ngClass] = "{'medium-movies' : mediaItem.medium === 'Movies', 'medium-series' : mediaItem.medium === 'Series'}"></app-media-item-component>
-  </section>
+  <app-media-item-component
+    [ngClass]="{'medium-movies': mediaItem.medium==='Movies', 'medium-series':mediaItem.medium==='Series'}" 
+    *ngFor="let mediaItem of mediaItems"
+    [mediaItem]="mediaItem"
+    (delete)="onMediaItemDelete($event)"></app-media-item-component>
+</section>
+<footer routerLink="/add">
+  <img src="../assets/01.png" class="">
+</footer>
